--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "/another" # the subpath of your site, e.g. /blog
 url: "http://weboholic.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Lorem Ipsum
+username: A Weboholic Speaks
 user_description: Anon Developer at Lorem Ipsum Dolor
 user_title: Anon Developer
 email: anon@anon.com
