--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://weboholic.xyz" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: a Weboholic Speaks
+username: a web-oholic speaks
 user_description: Anon Developer in the U.S.A.
 user_title: Anon Developer
-email: anon@anon.com
+email: fqrtuzkh@sharklasers.com
 twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
-disqus_username: lorem_ipsum
+github_username:  
+gplus_username:  
+disqus_username: 
 
 # Build settings
 markdown: kramdown
