--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://weboholic.xyz" # the base hostname & protocol for your site e.g. ht
 username: a web-oholic speaks
 user_description: Anon Developer in the U.S.A.
 user_title: Anon Developer
-email: fqrtuzkh@sharklasers.com
+email: info@weboholic.xyz
 twitter_username: lorem_ipsum
 github_username:  
 gplus_username:  
